# Greator

./: CMakeLists.txt  README.md
baseline/IP-DiskANN/: .gitignore  CMakeLists.txt  ip-greator.xlsx
baseline/IP-DiskANN/help/: git_push.sh  improve.md
baseline/IP-DiskANN/include/: index.h  percentile_stats.h  pq_flash_index.h
baseline/IP-DiskANN/include/v2/: graph_delta.h  index_merger.h  merge_insert.h
baseline/IP-DiskANN/src/: CMakeLists.txt  aux_utils.cpp  copy_index.cpp  index.cpp  linux_aligned_file_reader.cpp  pq_flash_index.cpp
baseline/IP-DiskANN/study/: process.md
baseline/IP-DiskANN/tests/: overall_performance.cpp
baseline/LM-DiskANN/include/: neighbor.h  pq_flash_index.h  pq_table.h  utils.h
baseline/LM-DiskANN/src/: index.cpp  pq_flash_index.cpp
baseline/LM-DiskANN/tests/: overall_performance.cpp  search_disk_index.cpp  test_concurr_merge_insert.cpp
include/: aligned_file_reader.h  linux_aligned_file_reader.h  pq_flash_index.h  utils.h
include/v2/: index_merger.h  merge_insert.h
scripts/: build_indices.sh  overall_performance.sh  pre_dataset.sh  readme.md
scripts/pre_dataset/: compute_knn.cpp  compute_knn.sh  extract_base.cpp  extract_base.sh  make_tags.cpp  make_tags.sh  make_trace.cpp  make_trace.sh  process_index_for_diffR.cpp  process_index_for_diffR.sh  readme.md  topology_extraction.cpp  topology_extraction.sh
src/: CMakeLists.txt  aux_utils.cpp  copy_index.cpp  pq_flash_index.cpp
src/v2/: index_merger.cpp  merge_insert.cpp
tests/: CMakeLists.txt  overall_performance.cpp  search_disk_index.cpp  test_concurr_merge_insert.cpp
(+8 files in other folders)
